Fix dark mode and product colors

--- a/assets/scss/common/_dark.scss
+++ b/assets/scss/common/_dark.scss
@@ -24,10 +24,6 @@ body.dark {
   color: $body-color-dark;
 }
 
-body.dark a {
-  color: $link-color-dark;
-}
-
 body.dark a.text-body {
   color: $body-color-dark !important;
 }
